# stock

./: .env  K-lines.py  README.md  app2.py  hello.ipynb  pyproject.toml  requirements.txt  schema.sql
app/: baostock_utils.py  config.py  crud.py  database.py  main.py  models.py  schemas.py  tasks.py  test_db.py
app/routers/: stock.py  watchlist.py
doc/: BaoStock.md
stock-display-frontend/: index.html  package-lock.json  package.json
stock-display-frontend/src/: App.vue  main.js
stock-display-frontend/src/components/: Header.vue  StockChart.vue  StockSelector.vue
stock-display-frontend/src/stores/: stock.js
