[project]
name = "stock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "baostock==0.8.9",
    "ipykernel>=6.30.1",
    "jupyterlab>=4.4.7",
    "numpy==2.2.6",
    "pandas==2.3.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "six==1.17.0",
    "tzdata==2025.2",
]
